--- a/register.html
+++ b/register.html
@@ -1,40 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Primeras_ventanas</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
     <script src="app/login.js"></script>
 </head>
-
 <body>
-    <section>
-        <div class="ventana">
-            <header class="titulo">Blog api</header>
-            <h1>BLOG API - LOGIN</h1>
-            <form>
-                <label>Nombre</label>
-                <br>
-                <input type="text" name="name" id="name">
-                <br>
-                <label>Email</label>
-                <br>
-                <input type="email" name="email" id="email">
-                <br>
-                <label>Contraseña</label>
-                <br>
-                <input type="password" name="Contrasena" id="password">
-                <br>
-                <label>Repetir Contraseña</label>
-                <br>
-                <input type="password" name="recontrasena" id="password2">
-            </form>
-            <button value="button" type="button" id="btn">Registrarse</button>
-        </div>
-    </section>
-</body>
+    <div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100">
+				<div class="login100-pic js-tilt" data-tilt>
+					<img src="https://colorlib.com/etc/lf/Login_v1/images/img-01.png" alt="IMG">
+				</div>
 
+				<form class="login100-form validate-form">
+					<span class="login100-form-title">
+						Inicia Sesion
+                    </span>
+                    
+                    <div id="name" class="wrap-input100 validate-input" data-validate = "El nombre es requerido">
+						<input class="input100" type="text" name="name" placeholder="Nombre">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-user" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div id="email" class="wrap-input100 validate-input" data-validate = "El correo es requerido: ex@abc.xyz">
+						<input class="input100" type="text" name="email" placeholder="Correo electrónico">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div id="password" class="wrap-input100 validate-input" data-validate = "La contraseña es requerida">
+						<input class="input100" type="password" name="pass" placeholder="Contraseña">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+
+                    <div id="password2" class="wrap-input100 validate-input" data-validate = "Repetir contraseña es requerida">
+						<input class="input100" type="password" name="pass" placeholder="Repetir Contraseña">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="container-login100-form-btn">
+						<button id="btn" class="login100-form-btn">
+							Registrarse
+						</button>
+					</div>
+
+					<div class="text-center p-t-12">
+						<span class="txt1">
+							Olvidaste
+						</span>
+						<a class="txt2" href="#">
+							Usuario / Contraseña?
+						</a>
+					</div>
+
+					<div class="text-center p-t-136">
+						<a class="txt2" href="#">
+							Crear una cuenta
+							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						</a>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+</body>
 </html>
