--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Inicia Sesion
+						Registrarse
                     </span>
                     
                     <div id="name" class="wrap-input100 validate-input" data-validate = "El nombre es requerido">
@@ -71,8 +71,8 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="#">
-							Crear una cuenta
+						<a href="login.html" class="txt2" href="#">
+							volver a login
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
