--- a/login.html
+++ b/login.html
@@ -20,35 +20,19 @@
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Inicia Sesion
+						Blog Api - Login
                     </span>
                     
-                    <div id="name" class="wrap-input100 validate-input" data-validate = "El nombre es requerido">
-						<input class="input100" type="text" name="name" placeholder="Nombre">
+                    <div id="user" class="wrap-input100 validate-input" data-validate = "El usuario es requerido">
+						<input class="input100" type="text" name="name" placeholder="Usuario">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div id="email" class="wrap-input100 validate-input" data-validate = "El correo es requerido: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Correo electrónico">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div id="password" class="wrap-input100 validate-input" data-validate = "La contraseña es requerida">
+					<div id="lpassword" class="wrap-input100 validate-input" data-validate = "La contraseña es requerida">
 						<input class="input100" type="password" name="pass" placeholder="Contraseña">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-					</div>
-
-                    <div id="password2" class="wrap-input100 validate-input" data-validate = "Repetir contraseña es requerida">
-						<input class="input100" type="password" name="pass" placeholder="Repetir Contraseña">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -57,7 +41,7 @@
 
 					<div class="container-login100-form-btn">
 						<button id="btn" class="login100-form-btn">
-							Registrarse
+							Login
 						</button>
 					</div>
 
@@ -71,7 +55,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="#">
+						<a href="register.html" class="txt2" href="#">
 							Crear una cuenta
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
