--- a/login.html
+++ b/login.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Primeras_ventanas</title>
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <script src="app/login.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Primeras_ventanas</title>
+	<link rel="stylesheet" href="assets/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	 crossorigin="anonymous">
+	<script src="app/login.js"></script>
+	<!-- jquery  -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="limiter">
+	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
@@ -21,17 +26,17 @@
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
 						Blog Api - Login
-                    </span>
-                    
-                    <div id="user" class="wrap-input100 validate-input" data-validate = "El usuario es requerido">
-						<input class="input100" type="text" name="name" placeholder="Usuario">
+					</span>
+
+					<div id="user" class="wrap-input100 validate-input" data-validate="El usuario/email es requerido">
+						<input class="input100" type="text" name="name" placeholder="Usuario/Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div id="lpassword" class="wrap-input100 validate-input" data-validate = "La contraseña es requerida">
+					<div id="lpassword" class="wrap-input100 validate-input" data-validate="La contraseña es requerida">
 						<input class="input100" type="password" name="pass" placeholder="Contraseña">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
@@ -40,7 +45,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button id="btn" class="login100-form-btn">
+						<button id="btnlogin" class="login100-form-btn">
 							Login
 						</button>
 					</div>
@@ -64,7 +69,8 @@
 			</div>
 		</div>
 	</div>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	 crossorigin="anonymous"></script>
 </body>
+
 </html>
