--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Primeras_ventanas</title>
     <link rel="stylesheet" href="assets/style.css">    
     <link rel="stylesheet" href="assets/styleblog.css">
+    <!-- jquery -->    
+	<script src="./assets/js/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <script src="app/login.js"></script>
@@ -29,14 +31,16 @@
                         </div> -->
                         <div class="col-sm-6 col-md-8">
                             <span class="label label-default pull-right"><i class="glyphicon glyphicon-comment"></i>50</span>
-                            <h4>Raymond Dragon</h4>
+                            <h4><i class="glyphicon glyphicon-star-empty"></i>
+                                Raymond Dragon                                
+                            </h4>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                                 tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                             <section>
                                 <i class="glyphicon glyphicon-folder-open"></i>Bootstrap
                                 <i class="glyphicon glyphicon-user"></i>RaymondDragon
                                 <i class="glyphicon glyphicon-calendar"></i>1395/12/21
-                                <i class="glyphicon glyphicon-eye-open"></i>10000
+                                <i class="glyphicon glyphicon-star"></i> 100
                                 <a href="#" class="btn btn-default btn-sm pull-right">More ... </a>
                             </section>
                         </div>
