--- a/login.html
+++ b/login.html
@@ -7,12 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Primeras_ventanas</title>
 	<link rel="stylesheet" href="assets/style.css">
+	<!-- jquery -->	
+	<script src="./assets/js/jquery-3.3.1.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
 	<script src="app/login.js"></script>
-	<!-- jquery  -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	 crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,16 +27,16 @@
 						Blog Api - Login
 					</span>
 
-					<div id="user" class="wrap-input100 validate-input" data-validate="El usuario/email es requerido">
-						<input class="input100" type="text" name="name" placeholder="Usuario/Email">
+					<div class="wrap-input100 validate-input" data-validate="El usuario/email es requerido">
+						<input  id="user" class="input100" type="text" name="name" placeholder="Usuario/Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div id="lpassword" class="wrap-input100 validate-input" data-validate="La contraseña es requerida">
-						<input class="input100" type="password" name="pass" placeholder="Contraseña">
+					<div class="wrap-input100 validate-input" data-validate="La contraseña es requerida">
+						<input id="lpassword" class="input100" type="password" name="pass" placeholder="Contraseña">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -45,7 +44,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button id="btnlogin" class="login100-form-btn">
+						<button type="button" id="btnlogin" class="login100-form-btn">
 							Login
 						</button>
 					</div>
